--- a/AI Review Sentiment Dashboard/docs/src/requirements.txt
+++ b/AI Review Sentiment Dashboard/docs/src/requirements.txt
@@ -1,10 +1,10 @@
 streamlit==1.38.0
 pandas==2.2.2
-matplotlib==3.8.4
+matplotlib==3.9.2
 plotly==5.24.1
 wordcloud==1.9.3
 vaderSentiment==3.3.2
 textblob==0.18.0.post0
 transformers==4.44.2
-torch==2.3.0
+torch==2.4.1+cpu
 openpyxl==3.1.5
